--- a/src/Components/Cards/Cards.css
+++ b/src/Components/Cards/Cards.css
@@ -4,22 +4,36 @@
 }
 
 .b-grid img {
-    width: 100px;
-    margin: 10px;
     border: 3px solid #48ffc2;
     border-radius: 10px;
     background-color: aquamarine;
 }
 
 .card {
+    width: 125px;
+    height: 125px;
     position: relative;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
 }
 
-.girada {
-    
+.flip {
+    transform: rotateY(180deg);
 }
 
-.card .reverso {
+.front,
+.reverse {
     position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
     top: 0;
+    left: 0;
+}
+
+.front {
+    transform: rotateY(180deg);
 }
